<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.ilagoproject.myapplication.viewmodel.AuthorizationFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:hint="@string/login"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onCheckedRememberMe()}"
                android:text="@string/remember_me"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:onClick="@{() -> viewModel.signIn()}"
                android:text="@string/sign_in"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressIndicatorAuthorization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
