<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ilagoproject.myapplication.viewmodel.ProfileFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include layout="@layout/account_header"
            app:viewModel="@{viewModel}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/accountInfo">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"

                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/name"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.name}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/balance"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.balance}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/phone"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.phone}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/address"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.address}"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/country"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.country}"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/city"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.model.accountData.accountInfo.city}"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>